updated landing page, fixed message input focus (it always focuses on mobile, and it stop suggesting past messages)

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,13 @@
 h1 {
     overflow-wrap: break-word;
 }
+
+.custom-button {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.home-img {
+    margin-bottom: 15px;
+}
